--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - MEDIAWIKI_ADMIN_USERNAME=admin
       - MEDIAWIKI_ADMIN_PASSWORD=secret
       - MEDIAWIKI_NAME=Testwiki
+      - MEDIAWIKI_DEBUG=false
     volumes:
       - images:/var/www/html/images
       - config:/var/www/html/config
